--- a/data_feed.html
+++ b/data_feed.html
@@ -725,7 +725,7 @@
       <div id="u93" class="ax_default sticky_1">
         <div id="u93_div" class=""></div>
         <div id="u93_text" class="text ">
-          <p><span>file：输入框输入链接，点击“test”读取表头，判断表头是否符合要求，并给出判断结果</span></p><p><span><br></span></p><p><span style="color:#999999;">ps：类目规范、模版下载</span></p>
+          <p><span>file：选取文件弹窗。</span></p><p><span><br></span></p><p><span style="color:#999999;">ps：模版下载</span></p>
         </div>
       </div>
 
@@ -802,7 +802,7 @@
       <div id="u102" class="ax_default label">
         <div id="u102_div" class=""></div>
         <div id="u102_text" class="text ">
-          <p><span>On APP Status:</span></p>
+          <p><span>Merchant type:</span></p>
         </div>
       </div>
 
@@ -810,8 +810,7 @@
       <div id="u103" class="ax_default droplist">
         <select id="u103_input">
           <option selected value="All">All</option>
-          <option value="Show">Show</option>
-          <option value="Hide">Hide</option>
+          <option value="SELLER_SHOP">SELLER_SHOP</option>
         </select>
       </div>
 
